--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_secure_storage: ^9.0.0
   connectivity_plus: ^4.0.2
   rive_common: ^0.4.8
+  google_nav_bar: ^5.0.6
 
 dev_dependencies:
   flutter_test:
