--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   connectivity_plus: ^4.0.2
   rive_common: ^0.4.8
   google_nav_bar: ^5.0.6
+  intrinsic_grid_view: ^0.0.2
 
 dev_dependencies:
   flutter_test:
