Added Message Dialogs in Tag Winning Screen. Updated App Name. Removed Focus from all fields in Registration Screen.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="excise_e_auction"
+        android:label="Excise Auction"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
